--- a/src/exercise/01.md
+++ b/src/exercise/01.md
@@ -161,4 +161,4 @@ You can play around with this in the `src/examples/code-splitting` directory.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=01%3A%20Code%20splitting&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=01%3A%20Code%20splitting&em=mail%40asheerrizvi.com).
