--- a/src/exercise/02.md
+++ b/src/exercise/02.md
@@ -134,4 +134,4 @@ build every time you make a change.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=02%3A%20useMemo%20for%20expensive%20calculations&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=02%3A%20useMemo%20for%20expensive%20calculations&em=mail%40asheerrizvi.com).
