--- a/src/exercise/03.md
+++ b/src/exercise/03.md
@@ -199,4 +199,4 @@ to `ListItem` so you don't have to pass the frequently changing values for
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=03%3A%20React.memo%20for%20reducing%20unnecessary%20re-renders&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=03%3A%20React.memo%20for%20reducing%20unnecessary%20re-renders&em=mail%40asheerrizvi.com).
