--- a/src/exercise/05.md
+++ b/src/exercise/05.md
@@ -85,4 +85,4 @@ provider? Hmm.... Give that a try and see if you can get things to run faster.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=05%3A%20Optimize%20context%20value&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=05%3A%20Optimize%20context%20value&em=mail%40asheerrizvi.com).
