--- a/src/exercise/06.md
+++ b/src/exercise/06.md
@@ -197,4 +197,4 @@ You can use that to compare to
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=06%3A%20Fix%20%22perf%20death%20by%20a%20thousand%20cuts%22&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=06%3A%20Fix%20%22perf%20death%20by%20a%20thousand%20cuts%22&em=mail%40asheerrizvi.com).
