--- a/src/exercise/07.md
+++ b/src/exercise/07.md
@@ -128,4 +128,4 @@ In this extra credit, add tracing for the click of the counter.
 ## 🦉 Feedback
 
 Fill out
-[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=).
+[the feedback form](https://ws.kcd.im/?ws=React%20Performance%20%E2%9A%A1&e=07%3A%20Production%20performance%20monitoring&em=mail%40asheerrizvi.com).
